syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/tijanadmi/bookings_backend/pb";

message User {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    string phone = 4;
    int32 access_level= 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;

}